--- a/english-assistant-webapi/pom.xml
+++ b/english-assistant-webapi/pom.xml
@@ -79,25 +79,15 @@
             <version>2.6.1</version>
             <scope>compile</scope>
         </dependency>
-
-        <!-- cache -->
     </dependencies>
 
     <build>
-        <finalName>${artifactId}</finalName>
+        <finalName>ea</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <!--<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>-->
         </plugins>
     </build>
 
