Добавил плагины для корректировки сборки проекта

--- a/english-assistant-core/pom.xml
+++ b/english-assistant-core/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <java.verison>1.8</java.verison>
-        <start-class>com.gavrilov.StartApp</start-class>
+       <!-- <start-class>com.gavrilov.StartApp</start-class>-->
     </properties>
 
     <dependencies>
@@ -113,11 +113,6 @@
             <version>5.2.12.Final</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-annotations</artifactId>
-            <version>3.5.6-Final</version>
-        </dependency>
-        <dependency>
             <groupId>javax.cache</groupId>
             <artifactId>cache-api</artifactId>
             <version>1.0.0</version>
@@ -138,8 +133,18 @@
         <finalName>${artifactId}</finalName>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>com.gavrilov.StartApp</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
